# bcbpy

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: tests.yml
bcbpy/: __init__.py  client.py
tests/: test_client.py  test_package.py  test_version.py
