[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bcbpy"
dynamic = ["version"]
description = "Python client for the Banco Central do Brasil SGS (Sistema Gerenciador de Series Temporais) API with 115 curated series codes for Brazilian economic and financial time series."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Rodrigo Teodoro", email = "rodrigoteodoro.90@gmail.com" },
]
keywords = [
    "bcb",
    "banco-central",
    "brasil",
    "brazil",
    "sgs",
    "economics",
    "finance",
    "time-series",
    "ipca",
    "selic",
    "cdi",
    "ptax",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Natural Language :: Portuguese (Brazilian)",
    "Natural Language :: English",
]
dependencies = [
    "pandas>=1.5",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build>=1.0",
    "twine>=4.0",
]

[project.urls]
Homepage = "https://github.com/rteoo/bcbpy"
Repository = "https://github.com/rteoo/bcbpy"
Issues = "https://github.com/rteoo/bcbpy/issues"
Changelog = "https://github.com/rteoo/bcbpy/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = { attr = "bcbpy.__version__" }

[tool.setuptools.packages.find]
include = ["bcbpy*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that hit the live BCB API (may be slow)",
]
